--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,23 +6,22 @@ networks:
 
 services:
   db:
-    image: postgres:15-alpine
+    image: postgres:16-alpine
     container_name: decies-db
-    env_file:
-      - .env
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-decies_dev}
-      POSTGRES_USER: ${POSTGRES_USER:-dev}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dev123}
+      POSTGRES_DB: decies
+      POSTGRES_USER: decies
+      POSTGRES_PASSWORD: decies
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+      - ./backend/db/init:/docker-entrypoint-initdb.d
     networks:
       - decies-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-dev}"]
-      interval: 10s
+      test: [ "CMD-SHELL", "pg_isready -U decies" ]
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -31,42 +30,19 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: decies-backend
-    env_file:
-      - backend/.env
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-dev}:${POSTGRES_PASSWORD:-dev123}@db:5432/${POSTGRES_DB:-decies_dev}
+      DATABASE_URL: postgresql://decies:decies@db:5432/decies
     ports:
-      - "${BACKEND_PORT:-8000}:8000"
+      - "8000:8000"
     volumes:
       - ./backend:/app
-      - /app/.venv  # Evitar conflictos de venv
+      - /app/.venv
     networks:
       - decies-network
     depends_on:
       db:
         condition: service_healthy
-    command: uvicorn app.main:app --host 0.0.0.0 --reload
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
-    container_name: decies-frontend
-    env_file:
-      - frontend/.env
-    environment:
-      NEXT_PUBLIC_API_URL: http://localhost:${BACKEND_PORT:-8000}
-    ports:
-      - "${FRONTEND_PORT:-3000}:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
-    networks:
-      - decies-network
-    depends_on:
-      - backend
-    command: npm run dev
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
-  postgres_data:
+  pgdata:
