ci: add path filters to workflows (only run when relevant files change)

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -3,11 +3,15 @@ name: Backend CI
 on:
   pull_request:
     paths:
-      - 'backend/**'
+      - "backend/**"
+      - ".github/workflows/backend-ci.yml"
   push:
     branches:
       - main
       - develop
+    paths:
+      - "backend/**"
+      - ".github/workflows/backend-ci.yml"
 
 jobs:
   test:
