--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -28,16 +28,16 @@ jobs:
         run: uv python install 3.12
       
       - name: Install dependencies
+        working-directory: backend
         run: |
-          cd backend
-          uv sync --dev
+          uv pip install -e ".[dev]"
       
       - name: Lint with Ruff
+        working-directory: backend
         run: |
-          cd backend
           uv run ruff check .
+          uv run ruff format --check .
       
       - name: Run tests
-        run: |
-          cd backend
-          uv run pytest --cov=app --cov-report=xml
+        working-directory: backend
+        run: uv run pytest -q
