--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -24,26 +24,17 @@ jobs:
           node-version: '20'
       
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
+        working-directory: frontend
+        run: npm install
       
       - name: Lint
-        run: |
-          cd frontend
-          npm run lint
-      
-      - name: Type check
-        run: |
-          cd frontend
-          npx tsc --noEmit
+        working-directory: frontend
+        run: npm run lint
       
       - name: Test
-        run: |
-          cd frontend
-          npm run test
+        working-directory: frontend
+        run: npm test --if-present
       
       - name: Build check
-        run: |
-          cd frontend
-          npm run build
+        working-directory: frontend
+        run: npm run build
