--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -37,4 +37,4 @@ jobs:
       
       - name: Build check
         working-directory: frontend
-        run: npm run build
+        run: npm run build --if-present
