--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -18,28 +18,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      
+
       - name: Install uv
         uses: astral-sh/setup-uv@v2
         with:
           version: "latest"
-      
+
+      - name: Create venv
+        working-directory: backend
+        run: uv venv
+
       - name: Install dependencies
         working-directory: backend
         run: |
+          . .venv/bin/activate
           uv pip install -e ".[dev]"
-      
+
       - name: Lint with Ruff
         working-directory: backend
         run: |
+          . .venv/bin/activate
           uv run ruff check .
           uv run ruff format --check .
-      
+
       - name: Run tests
         working-directory: backend
-        run: uv run pytest -q
+        run: |
+          . .venv/bin/activate
+          uv run pytest -q
